# apples_sqr

./: LICENSE  README.md  common.py  data_loading.py  display.py  evaluate.py  metrics.py  plots.py  pyproject.toml  test_metrics.py
tests/: generate_multiclass_data.py  model1.csv  queries.txt
tests/test_binary/: model2.csv  test_set.csv
tests/test_multiclass/: model1.csv  model2.csv  queries.txt  test_set.csv
